# CleanQuakeFork

./: CMakeLists.txt  build_and_log.bat
src/: adivtab.hpp  anorms.hpp  audio.cpp  bspfile.h  bspfile.hpp  cd_sdl.c  cd_sdl.cpp  cdaudio.hpp  chase.c  chase.cpp  cl_demo.c  cl_demo.cpp  cl_input.c  cl_input.cpp  cl_main.cpp  cl_parse.cpp  cl_tent.c  cl_tent.cpp  client.cpp  client.h  client.hpp  cmd.c  cmd.cpp  cmd.h  cmd.hpp  common.c  common.cpp  common.h  common.hpp  console.c  console.cpp  console.h  console.hpp  crc.c  crc.cpp  crc.hpp  cvar.cpp  cvar.hpp  d_edge.c  d_edge.cpp  (+171 more)
